# NN

./: CMakeLists.txt  main.cpp
nn/: helpers.h
nn/layer/: layer.cpp  layer.h
nn/network/: network.cpp  network.h
nn/neuron/: neuron.cpp  neuron.h
nn/trainer/: trainer.cpp  trainer.h
